widgets hover/responsive

--- a/pages/listings.html
+++ b/pages/listings.html
@@ -18,117 +18,127 @@
         <title>Listings</title>
     </head>
     <body>
-        <header class="main-image listings-main-image">
-            <div class="header">
-                <div class="logo">
-                    <a href="../index.html" class="logo"
-                        ><img src="../img/logo.svg" alt="JustHome_logo"
-                    /></a>
-                </div>
-                <nav class="navbar">
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="../index.html">
-                                Home
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="#">
-                                Listings
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="/pages/about-us.html">
-                                About us
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="">
-                                Blog
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="">
-                                Pages
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                </nav>
-                <div class="nav-right-block">
-                    <div class="phone">
-                        <img src="/img/phone_icon.svg" alt="phone_icon" />
-                        <a href="tel:+6868588666">+68 685 88666</a>
-                    </div>
-                    <div>
-                        <div class="some-text">
-                            <a class="button" href="/pages/popup.html"
-                                ><img
-                                    src="../img/profile_icon.svg"
-                                    alt="profile_icon"
-                            /></a>
-                        </div>
-                    </div>
-                    <button class="add-button" type="button">
-                        Add Property
-                    </button>
-                </div>
-                <div class="burger">
-                    <img src="/img/hamburger-menu.svg" alt="" />
-                </div>
+        <header class="header">
+            <div class="logo">
+                <a href="../index.html" class="logo"
+                    ><img src="../img/logo.svg" alt="JustHome_logo"
+                /></a>
             </div>
-            <div class="listings-text-box">
-                <h1>The #1 site real estate professionals trust*</h1>
-                <p>
-                    From as low as $10 per day with limited time offer
-                    discounts.
-                </p>
-                <div class="yellow-paragraph">
-                    <a href="#">
-                        <p>Browse More Properties</p>
-                        <img src="../img/arrow-yellow.svg" alt="arrow-yellow" />
-                    </a>
+            <nav class="navbar">
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="../index.html">
+                            Home
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="#">
+                            Listings
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/pages/about-us.html">
+                            About us
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="">
+                            Blog
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="">
+                            Pages
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+            </nav>
+            <div class="nav-right-block">
+                <div class="phone">
+                    <img src="/img/phone_icon.svg" alt="phone_icon" />
+                    <a href="tel:+6868588666">+68 685 88666</a>
+                </div>
+                <div>
+                    <div class="profile_button">
+                        <a class="button" href="/pages/popup.html"
+                            ><img
+                                src="../img/profile_icon.svg"
+                                alt="profile_icon"
+                        /></a>
+                    </div>
+                </div>
+                <button class="add-button" type="button">Add Property</button>
+            </div>
+            <div class="burger">
+                <div class="dropdown burger-hover">
+                    <button class="dropbtn">
+                        <img src="/img/hamburger-menu.svg" alt="" />
+                    </button>
+                    <div class="dropdown-content burger-hover">
+                        <a href="../index.html"> Home </a>
+                        <a href="/pages/listings.html"> Listings </a>
+                        <a href="/pages/about-us.html"> About us </a>
+                    </div>
                 </div>
             </div>
         </header>
         <main>
+            <section class="listings-main-image">
+                <div class="listings-text-box">
+                    <h1>The #1 site real estate professionals trust*</h1>
+                    <p>
+                        From as low as $10 per day with limited time offer
+                        discounts.
+                    </p>
+                    <div class="yellow-paragraph">
+                        <a href="#">
+                            <p>Browse More Properties</p>
+                            <img
+                                src="../img/arrow-yellow.svg"
+                                alt="arrow-yellow"
+                            />
+                        </a>
+                    </div>
+                </div>
+            </section>
             <section class="cities-section">
                 <div class="cities-title">
                     <h2>Find Properties in These Cities</h2>
