--- a/index.html
+++ b/index.html
@@ -16,124 +16,131 @@
         <title>JustHome</title>
     </head>
     <body>
-        <header class="main-image">
-            <div class="header">
-                <div class="logo">
-                    <a href="index.html" class="logo">
-                        <img src="img/logo.svg" alt="JustHome_logo" />
-                    </a>
-                </div>
-                <nav class="navbar">
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="#">
-                                Home
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="/pages/listings.html">
-                                Listings
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="/pages/about-us.html">
-                                About us
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="#">
-                                Blog
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                    <div class="dropdown">
-                        <button class="dropbtn">
-                            <a href="#">
-                                Pages
-                                <i class="fa-solid fa-caret-down"></i>
-                            </a>
-                        </button>
-                        <div class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </div>
-                    </div>
-                </nav>
-                <div class="nav-right-block">
-                    <div class="phone">
-                        <img src="/img/phone_icon.svg" alt="phone_icon" />
-                        <a href="tel:+6868588666">+68 685 88666</a>
-                    </div>
-                    <div>
-                        <div class="some-text">
-                            <a class="button" href="/pages/popup.html"
-                                ><img
-                                    src="../img/profile_icon.svg"
-                                    alt="profile_icon"
-                            /></a>
-                        </div>
-                    </div>
-                    <button class="add-button" type="button">
-                        Add Property
-                    </button>
-                </div>
-                <div class="burger">
-                    <img src="/img/hamburger-menu.svg" alt="" />
-                </div>
+        <header class="header">
+            <div class="logo">
+                <a href="index.html" class="logo">
+                    <img src="img/logo.svg" alt="JustHome_logo" />
+                </a>
             </div>
-            <div class="text-box">
-                <h1 class="heading-primary">
-                    <span class="heading-primary-main"
-                        >Believe in finding it</span
-                    >
-                    <span class="heading-primary-sub">
-                        Search properties for sale and to rent in the UK
-                    </span>
-                </h1>
-                <div class="search">
-                    <input
-                        type="text"
-                        class="searchTerm"
-                        placeholder="What are you looking for?"
-                    />
-                    <button type="submit" class="searchButton">
-                        <img src="img/search-icon.svg" alt="search-icon" />
+            <nav class="navbar">
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="#">
+                            Home
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
                     </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/pages/listings.html">
+                            Listings
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="/pages/about-us.html">
+                            About us
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="#">
+                            Blog
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        <a href="#">
+                            Pages
+                            <i class="fa-solid fa-caret-down"></i>
+                        </a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
+            </nav>
+            <div class="nav-right-block">
+                <div class="phone">
+                    <img src="/img/phone_icon.svg" alt="phone_icon" />
+                    <a href="tel:+6868588666">+68 685 88666</a>
+                </div>
+                <div>
+                    <div class="some-text">
+                        <a class="button" href="/pages/popup.html"
+                            ><img
+                                src="../img/profile_icon.svg"
+                                alt="profile_icon"
+                        /></a>
+                    </div>
+                </div>
+                <button class="add-button" type="button">Add Property</button>
+            </div>
+            <div class="burger">
+                <div class="dropdown burger-hover">
+                    <button class="dropbtn">
+                        <img src="/img/hamburger-menu.svg" alt="" />
+                    </button>
+                    <div class="dropdown-content burger-hover">
+                        <a href="#"> Home </a>
+                        <a href="/pages/listings.html"> Listings </a>
+                        <a href="/pages/about-us.html"> About us </a>
+                    </div>
                 </div>
             </div>
         </header>
         <main>
+            <section class="main-image">
+                <div class="text-box">
+                    <h1 class="heading-primary">
+                        <span class="heading-primary-main"
+                            >Believe in finding it</span
+                        >
+                        <span class="heading-primary-sub">
+                            Search properties for sale and to rent in the UK
+                        </span>
+                    </h1>
+                    <div class="search">
+                        <input
+                            type="text"
+                            class="searchTerm"
+                            placeholder="What are you looking for?"
+                        />
+                        <button type="submit" class="searchButton">
+                            <img src="img/search-icon.svg" alt="search-icon" />
+                        </button>
+                    </div>
+                </div>
+            </section>
             <section class="column-widgets">
                 <div class="categories-title">
                     <h2>Featured Properties</h2>
