--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="icon"
-            href="img/favicon-icon.svg"
+            href="./img/favicon-icon.svg"
             type="image/favicon-icon.svg"
         />
         <link
             href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="./css/styles.css" />
         <title>JustHome</title>
     </head>
     <body>
         <header class="header">
             <div class="logo">
                 <a href="index.html" class="logo">
-                    <img src="img/logo.svg" alt="JustHome_logo" />
+                    <img src="./img/logo.svg" alt="JustHome_logo" />
                 </a>
             </div>
             <nav class="navbar">
@@ -38,7 +38,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">
-                        <a href="/pages/listings.html">
+                        <a href="./pages/listings.html">
                             Listings
                             <i class="fa-solid fa-caret-down"></i>
                         </a>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">
-                        <a href="/pages/about-us.html">
+                        <a href="./pages/about-us.html">
                             About us
                             <i class="fa-solid fa-caret-down"></i>
                         </a>
@@ -91,14 +91,14 @@
             </nav>
             <div class="nav-right-block">
                 <div class="phone">
-                    <img src="/img/phone_icon.svg" alt="phone_icon" />
+                    <img src="./img/phone_icon.svg" alt="phone_icon" />
                     <a href="tel:+6868588666">+68 685 88666</a>
                 </div>
                 <div>
                     <div class="some-text">
-                        <a class="button" href="/pages/popup.html"
+                        <a class="button" href="./pages/popup.html"
                             ><img
-                                src="../img/profile_icon.svg"
+                                src="./img/profile_icon.svg"
                                 alt="profile_icon"
                         /></a>
                     </div>
@@ -108,12 +108,12 @@
             <div class="burger">
                 <div class="dropdown burger-hover">
                     <button class="dropbtn">
-                        <img src="/img/hamburger-menu.svg" alt="" />
+                        <img src="./img/hamburger-menu.svg" alt="" />
                     </button>
                     <div class="dropdown-content burger-hover">
                         <a href="#"> Home </a>
-                        <a href="/pages/listings.html"> Listings </a>
-                        <a href="/pages/about-us.html"> About us </a>
+                        <a href="./pages/listings.html"> Listings </a>
+                        <a href="./pages/about-us.html"> About us </a>
                     </div>
                 </div>
             </div>
@@ -136,7 +136,10 @@
                             placeholder="What are you looking for?"
                         />
                         <button type="submit" class="searchButton">
-                            <img src="img/search-icon.svg" alt="search-icon" />
+                            <img
+                                src="./img/search-icon.svg"
+                                alt="search-icon"
+                            />
                         </button>
                     </div>
                 </div>
@@ -151,7 +154,7 @@
                         <div class="widget-description">
                             <p class="widget-title">Luxury Family Home</p>
                             <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
+                                <img src="./img/pin-Icon.svg" alt="pin-Icon" />
                                 <p>1800-1818 79th St</p>
                             </div>
                             <div class="description-row">
@@ -161,21 +164,21 @@
                                 <div class="specification">
                                     <div class="bedrooms">
                                         <img
-                                            src="img/bed-icon.svg"
+                                            src="./img/bed-icon.svg"
                                             alt="bed-icon"
                                         />
                                         <p>4</p>
                                     </div>
                                     <div class="bathrooms">
                                         <img
-                                            src="img/bath-icon.svg"
+                                            src="./img/bath-icon.svg"
                                             alt="bath-icon"
                                         />
                                         <p>1</p>
                                     </div>
                                     <div class="square">
                                         <img
-                                            src="img/square-icon.svg"
+                                            src="./img/square-icon.svg"
                                             alt="square-icon"
                                         />
                                         <p>400</p>
@@ -190,7 +193,7 @@
                         <div class="widget-description">
                             <p class="widget-title">Luxury Family Home</p>
                             <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
+                                <img src="./img/pin-Icon.svg" alt="pin-Icon" />
                                 <p>1800-1818 79th St</p>
                             </div>
                             <div class="description-row">
@@ -200,21 +203,21 @@
                                 <div class="specification">
                                     <div class="bedrooms">
                                         <img
-                                            src="img/bed-icon.svg"
+                                            src="./img/bed-icon.svg"
                                             alt="bed-icon"
                                         />
                                         <p>4</p>
                                     </div>
                                     <div class="bathrooms">
                                         <img
-                                            src="img/bath-icon.svg"
+                                            src="./img/bath-icon.svg"
                                             alt="bath-icon"
                                         />
                                         <p>1</p>
                                     </div>
                                     <div class="square">
                                         <img
-                                            src="img/square-icon.svg"
+                                            src="./img/square-icon.svg"
                                             alt="square-icon"
                                         />
                                         <p>400</p>
@@ -228,7 +231,7 @@
                         <div class="widget-description">
                             <p class="widget-title">Luxury Family Home</p>
                             <div class="location">
-                                <img src="img/pin-Icon.svg" alt="pin-Icon" />
+                                <img src="./img/pin-Icon.svg" alt="pin-Icon" />
                                 <p>1800-1818 79th St</p>
                             </div>
                             <div class="description-row">
@@ -238,21 +241,21 @@
                                 <div class="specification">
                                     <div class="bedrooms">
                                         <img
-                                            src="img/bed-icon.svg"
+                                            src="./img/bed-icon.svg"
                                             alt="bed-icon"
                                         />
                                         <p>4</p>
                                     </div>
                                     <div class="bathrooms">
                                         <img
-                                            src="img/bath-icon.svg"
+                                            src="./img/bath-icon.svg"
                                             alt="bath-icon"
                                         />
                                         <p>1</p>
                                     </div>
                                     <div class="square">
                                         <img
-                                            src="img/square-icon.svg"
+                                            src="./img/square-icon.svg"
                                             alt="square-icon"
                                         />
                                         <p>400</p>
@@ -266,7 +269,7 @@
                     <button class="widget-btn" type="button">
                         See All Listing
                         <img
-                            src="img/arrow-for-button-icon.svg"
+                            src="./img/arrow-for-button-icon.svg"
                             alt="arrow-for-button-icon"
                         />
                     </button>
@@ -284,7 +287,6 @@
                                 <p>7,000 M</p>
                             </div>
                         </div>
-                        <img src="" alt="" />
                     </div>
                     <div class="column-description">
                         <h2>Local expertise for luxury homes</h2>
@@ -297,7 +299,7 @@
                         <button class="learn-more-button" type="button">
                             Learn More
                             <img
-                                src="img/arrow-for-button-icon.svg"
+                                src="./img/arrow-for-button-icon.svg"
                                 alt="arrow-for-button-icon"
                             />
                         </button>
@@ -346,7 +348,7 @@
                     </h2>
                     <div class="finding-steps">
                         <div class="finding-steps-description">
-                            <img src="img/house-icon.svg" alt="house-icon" />
+                            <img src="./img/house-icon.svg" alt="house-icon" />
                             <div>
                                 <p>Find Real Estate</p>
                                 <p>
@@ -357,7 +359,7 @@
                         </div>
                         <div class="finding-steps-description">
                             <img
-                                src="img/meeting-icon.svg"
+                                src="./img/meeting-icon.svg"
                                 alt="meeting-icon"
                             />
                             <div>
@@ -369,7 +371,7 @@
                             </div>
                         </div>
                         <div class="finding-steps-description">
-                            <img src="img/keys-icon.svg" alt="keys-icon" />
+                            <img src="./img/keys-icon.svg" alt="keys-icon" />
                             <div>
                                 <p>Take The Keys</p>
                                 <p>
@@ -408,7 +410,7 @@
                                 <button class="widget-btn" type="button">
                                     See All Listing
                                     <img
-                                        src="img/arrow-for-button-icon.svg"
+                                        src="./img/arrow-for-button-icon.svg"
                                         alt="arrow-for-button-icon"
                                     />
                                 </button>
@@ -431,7 +433,7 @@
                                 <button class="widget-btn" type="button">
                                     See All Listing
                                     <img
-                                        src="img/arrow-for-button-icon.svg"
+                                        src="./img/arrow-for-button-icon.svg"
                                         alt="arrow-for-button-icon"
                                     />
                                 </button>
@@ -454,7 +456,7 @@
                                 <button class="widget-btn" type="button">
                                     See All Listing
                                     <img
-                                        src="img/arrow-for-button-icon.svg"
+                                        src="./img/arrow-for-button-icon.svg"
                                         alt="arrow-for-button-icon"
                                     />
                                 </button>
@@ -477,7 +479,7 @@
                                 <button class="widget-btn" type="button">
                                     See All Listing
                                     <img
-                                        src="img/arrow-for-button-icon.svg"
+                                        src="./img/arrow-for-button-icon.svg"
                                         alt="arrow-for-button-icon"
                                     />
                                 </button>
@@ -546,7 +548,7 @@
             <div class="iframe-footer-conteiner">
                 <iframe
                     class="iframe-footer"
-                    src="/components/footer.html"
+                    src="./components/footer.html"
                     scrolling="no"
                     frameborder="0"
                     width="100%"
