--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -93,7 +93,7 @@
             </nav>
             <div class="nav-right-block">
                 <div class="phone">
-                    <img src="/img/phone_icon.svg" alt="phone_icon" />
+                    <img src="../img/phone_icon.svg" alt="phone_icon" />
                     <a href="tel:+6868588666">+68 685 88666</a>
                 </div>
                 <div>
@@ -110,7 +110,7 @@
             <div class="burger">
                 <div class="dropdown burger-hover">
                     <button class="dropbtn">
-                        <img src="/img/hamburger-menu.svg" alt="" />
+                        <img src="../img/hamburger-menu.svg" alt="" />
                     </button>
                     <div class="dropdown-content burger-hover">
                         <a href="../index.html"> Home </a>
