--- a/pages/listings.html
+++ b/pages/listings.html
@@ -93,12 +93,12 @@
             </nav>
             <div class="nav-right-block">
                 <div class="phone">
-                    <img src="/img/phone_icon.svg" alt="phone_icon" />
+                    <img src="../img/phone_icon.svg" alt="phone_icon" />
                     <a href="tel:+6868588666">+68 685 88666</a>
                 </div>
                 <div>
                     <div class="profile_button">
-                        <a class="button" href="/pages/popup.html"
+                        <a class="button" href="../pages/popup.html"
                             ><img
                                 src="../img/profile_icon.svg"
                                 alt="profile_icon"
@@ -110,7 +110,7 @@
             <div class="burger">
                 <div class="dropdown burger-hover">
                     <button class="dropbtn">
-                        <img src="/img/hamburger-menu.svg" alt="" />
+                        <img src="../img/hamburger-menu.svg" alt="" />
                     </button>
                     <div class="dropdown-content burger-hover">
                         <a href="../index.html"> Home </a>
