--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="dropbtn">
-                        <a href="/pages/listings.html">
+                        <a href="listings.html">
                             Listings
                             <i class="fa-solid fa-caret-down"></i>
                         </a>
@@ -114,8 +114,8 @@
                     </button>
                     <div class="dropdown-content burger-hover">
                         <a href="../index.html"> Home </a>
-                        <a href="/pages/listings.html"> Listings </a>
-                        <a href="/pages/about-us.html"> About us </a>
+                        <a href="listings.html"> Listings </a>
+                        <a href="about-us.html"> About us </a>
                     </div>
                 </div>
             </div>
