--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -98,7 +98,7 @@
                 </div>
                 <div>
                     <div class="some-text">
-                        <a class="button" href="/popup.html"
+                        <a class="button" href="popup.html"
                             ><img
                                 src="../img/profile_icon.svg"
                                 alt="profile_icon"
