--- a/pages/listings.html
+++ b/pages/listings.html
@@ -98,7 +98,7 @@
                 </div>
                 <div>
                     <div class="profile_button">
-                        <a class="button" href="../pages/popup.html"
+                        <a class="button" href="popup.html"
                             ><img
                                 src="../img/profile_icon.svg"
                                 alt="profile_icon"
