--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -97,7 +97,7 @@
                     <a href="tel:+6868588666">+68 685 88666</a>
                 </div>
                 <div>
-                    <div class="some-text">
+                    <div class="profile_button">
                         <a class="button" href="popup.html"
                             ><img
                                 src="../img/profile_icon.svg"
